2005-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(paintMenuItem): Always call paintBackground().

2005-11-15  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkDialogPeer.java
	(create): Since popups were changed to be JWindowPopups,
	this code should be done in GtkWindowPeer. Code is not
	needed.
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	(create): If window is not focusable, it should not take
	the focus away from any other window. Therefore, its
	type should be set to GDK_WINDOW_TYPE_HINT_MENU.

2005-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalButtonUI.java
	(update): New method. Paints the gradient.
	* javax/swing/plaf/metal/MetalCheckBoxIcon.java
	(paintIcon): Paint gradient.
	* javax/swing/plaf/metal/MetalIconFactory.java
	(RadioButtonIcon.paintIcon): Paint gradient.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initClassDefaults): Added MetalMenuBarUI.
	* javax/swing/plaf/metal/MetalMenuBarUI.java: New file.
	* javax/swing/plaf/metal/MetalToggleButtonUI.java
	(update): New method. Paints the gradient.
	* javax/swing/plaf/metal/OceanTheme.java
	(addCustomEntriesToTable): Added all the gradients.

2005-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JMenu.java
	(JMenu()): Set opaque flag to false.
	(JMenu(String)): Likewise.
	(JMenu(Action)): Likewise.

2005-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(getRowHeight): Adjusted to deal correctly with fixed cell heights.
	(convertYRoRow): Likewise.
	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(installDefaults): Don't make the menu item opaque here.
	(paintBackground): Moved background painting code from
	paintMenuItem() to this method.
	(paintMenuItem): Moved background painting to paintBackground().
	(installDefaults): Don't set opaque flag here.

2005-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalUtils.java